--- a/WebPamyatajka/WebPamyatajka.csproj
+++ b/WebPamyatajka/WebPamyatajka.csproj
@@ -21,6 +21,8 @@
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.10" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.1" />
+        <PackageReference Include="Serilog" Version="3.0.0-dev-01921" />
+        <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.3-dev-00262" />
     </ItemGroup>
 
 </Project>
