--- a/WebPamyatajka/WebPamyatajka.csproj
+++ b/WebPamyatajka/WebPamyatajka.csproj
@@ -25,6 +25,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.NETCore.Platforms" Version="8.0.0-preview.2.23128.3" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.13" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
         <PackageReference Include="Serilog" Version="3.0.0-dev-01921" />
