--- a/WebPamyatajka/WebPamyatajka.csproj
+++ b/WebPamyatajka/WebPamyatajka.csproj
@@ -12,6 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="bootstrap" Version="5.3.0-alpha2" />
+        <PackageReference Include="jQuery" Version="3.6.4" />
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.10" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.10" />
